# 2024-RIFO_ROS2

./: CMakeLists.txt  package.xml
src/: simple_publisher.cpp  simple_subscriber.cpp
